syntax = "proto3";

package supervisor;

option go_package = 'supervisor/api';

service UtilityService {
  rpc Ping (PingRequest) returns (PingResponse) {}
}

message PingRequest {}

message PingResponse {
  // message is response of ping
  string message = 1;
}